tests/snapshots/examples_fixtures/aoc__2025__aoc_day7_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day7_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `sum`.

  examples/aoc/2025/aoc_day7_part2.flx:130:20
    |
130 |         finished + sum(active_counts)
    |                    ^^^

Hint:
  Define it first: let sum = ...;
== stdout ==
<not executed>
